Fix bugs found with Hudson find bugs.